--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
+    "formidable": "^3.5.2",
     "input-otp": "1.4.1",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
@@ -67,6 +68,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22",
     "@types/pg": "^8.11.11",
