--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.0",
     "pg": "^8.14.1",
     "pg-native": "latest",
     "react": "^19",
