--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,10 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+# typescript
+*.tsbuildinfo
 next-env.d.ts
+
+# environment variables
+.env
+vercel.env
